# TalkingCode

./: .dockerignore  .gitignore  404.html  README.md  compose.backend.yml  compose.dataprocessing.override.yml  compose.dataprocessing.yml  index.html  mkdocs.yml  objects.inv
.github/workflows/: backend.yaml  dagster.yaml  docs.yaml  frontend.yaml
backend/: conftest.py  index.html  mkdocs.yml  pyproject.toml
backend/architecture/: index.html
backend/backend/: __init__.py  config.py  errors.py  main.py
backend/backend/retrieval_augmented_generation/: __init__.py  retrieve.py  test_retrieve.py
backend/docs/: architecture.md  index.md  testing.md
backend/docs/reference/: errors.md
backend/endpoints/: index.html  openapi.json
backend/reference/config/: index.html
backend/reference/errors/: index.html
backend/reference/foo/: index.html
backend/reference/main/: index.html
backend/reference/retrieve/: index.html
backend/reference/tests/fixtures/: index.html
backend/testing/: index.html
backend/tests/integration/: database_fixtures.py  test_retrieval_augmented_generation.py  test_retrieval_integration.py
backend/tests/unit/: test_retrieval.py
config/: .env.template
dataprocessing/: .dockerignore  .gitignore  Dockerfile  alembic.ini  compose.yml  dagster.yaml  docker-compose-dev.yml  pyproject.toml  setup.cfg
dataprocessing/dataprocessing/: __init__.py
dataprocessing/dataprocessing/migrations/: env.py
dataprocessing/dataprocessing/migrations/versions/: 1450774118c5_init.py
dataprocessing/dataprocessing/orchestration/: assets.py  resources.py
dataprocessing/dataprocessing/processing/: __init__.py  embedding.py  ingestion.py
dataprocessing/src/: __init__.py  assets.py  log.py
dataprocessing/src/migrations/: env.py
dataprocessing/src/migrations/versions/: 73b779167726_init.py
dataprocessing/src/orchestration/: assets.py  resources.py
dataprocessing/src/processing/: __init__.py  database.py  embedding.py  ingestion.py
diagrams/: high-level-architecture.excalidraw
docker/backend/: Dockerfile
docker/dagster/: Dockerfile
docs/: index.md
docs/backend/: endpoints.md  index.md  testing.md
docs/backend/reference/: config.md  foo.md  main.md  retrieve.md
docs/backend/reference/tests/: fixtures.md
docs/diagrams/: high-level-architecure.excalidraw
docs/frontend/: overview.md
docs/pipelines/: Overview.md
docs/pipelines/reference/: assets.md  embedding.md  ingestion.md  resources.md
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/overview/: index.html
frontend/src/components/: Answer.svelte  CurrentSpend.svelte  ErrorMessage.svelte  Footer.svelte  Navbar.svelte  Question.svelte  SendButton.svelte  SuggestionCard.svelte  Suggestions.svelte
frontend/src/components/typography/: InlineCode.svelte  Paragraph.svelte
frontend/src/lib/: client.ts  schema.d.ts  schema.json
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/404/: +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/host-it-yourself/: +page.svelte
frontend/static/: mock-response.json
pipelines/: dagster.yaml  pyproject.toml  setup.cfg  setup.py
pipelines/Overview/: index.html
pipelines/pipelines/: __init__.py
pipelines/pipelines/orchestration/: assets.py  resources.py
pipelines/pipelines/processing/: __init__.py  embedding.py  ingestion.py
pipelines/reference/assets/: index.html
pipelines/reference/embedding/: index.html
pipelines/reference/ingestion/: index.html
pipelines/reference/resources/: index.html
search/: search_index.json
shared/: alembic.ini  docker-compose-dev.yml  pyproject.toml
shared/shared/: __init__.py  database.py  env.py
shared/shared/migrations/: env.py
shared/shared/migrations/versions/: 2b7a131f5366_add_primary_key_to_languages_repository_.py  4159df28d035_init.py  a3d2ba8fd39d_add_spend_table.py
