[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The backend of the chatGITpt project"
authors = ["ChidiRNweke <chidi125@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
shared = {path = "../shared"}
fastapi = "^0.111.0"
openai = "^1.31.0"
aiohttp = "^3.9.5"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
