[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The backend of the chatGITpt project"
authors = ["ChidiRNweke <chidi125@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
shared = {path = "../shared"}
fastapi = "^0.111.0"
openai = "^1.31.0"
aiohttp = "^3.9.5"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
testcontainers = {extras = ["postgres"], version = "^4.5.1"}
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.27"
mkdocs-render-swagger-plugin = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
