[tool.poetry]
name = "shared"
version = "0.1.4"
description = "A package containing utilities shared between the data pipelines and the backend side of the project"
authors = ["ChidiRNweke <chidi125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pgvector = "^0.2.5"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.27"
mkdocs-render-swagger-plugin = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
